@@ -38,6 +38,8 @@ mkdir -p $RPM_BUILD_ROOT%{_bindir}
 mkdir -p $RPM_BUILD_ROOT%{_mandir}/man1
 
 make install DESTDIR=$RPM_BUILD_ROOT
+mv $RPM_BUILD_ROOT%{_bindir}/socat $RPM_BUILD_ROOT%{_bindir}/socat1
+mv $RPM_BUILD_ROOT%{_mandir}/man1/socat.1 $RPM_BUILD_ROOT%{_mandir}/man1/socat1.1
 
 %clean
 rm -rf $RPM_BUILD_ROOT
@@ -46,7 +48,15 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(-,root,root)
 %doc README CHANGES EXAMPLES SECURITY doc/socat.html FAQ BUGREPORTS
 %doc COPYING COPYING.OpenSSL FILES PORTING DEVELOPMENT
-%{_bindir}/socat
+%{_bindir}/socat1
 %{_bindir}/procan
 %{_bindir}/filan
-%{_mandir}/man1/socat.1*
+%{_mandir}/man1/socat1.1
+
+%post
+ln -s -f socat1 %{_binddir}/socat
+ln -s -f socat1.1 %{_mandir}/man1/socat.1
+
+%postun
+rm -f %{_bindir}/socat
+rm -f %{_mandir}/man1/socat.1
